# swagger-output.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Node js ِExpress+ MongoDB API",
-    "description": "Node js ِExpress+ MongoDB API",
+    "title": "LearnVerse APIS",
+    "description": "Documentation about the APIS in our website  ",
     "version": "1.0.0"
   },
   "host": "localhost:3000",
@@ -332,6 +332,29 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/google": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/google/redirect": {
+      "get": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
